# lib/api-spec/openapi.yaml
@@ -2684,12 +2684,14 @@ components:
 
     Transaction:
       type: object
-      required: [id, orderId, buyerId, vendorId, amount, commissionAmount, vendorAmount, processor, status, createdAt]
+      required: [id, orderId, buyerId, vendorId, amount, commissionAmount, vendorAmount, processor, status, transactionType, createdAt]
       properties:
         id:
           type: integer
         orderId:
           type: integer
+        orderItemId:
+          type: ["integer", "null"]
         buyerId:
           type: integer
         vendorId:
@@ -2710,6 +2712,9 @@ components:
         status:
           type: string
           enum: [pending, success, failed]
+        transactionType:
+          type: string
+          enum: [sale, refund, reversal]
         createdAt:
           type: string
           format: date-time
